# stitch-editor

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Cargo.toml  LEGAL_GATE.md  NOTICE.md  README.md  SECURITY.md
.agents/rules/: superplan-entry.md
.amazonq/rules/memory-bank/: product.md
.cargo/: config.toml
.gemini/commands/: superplan.toml
.github/workflows/: bootstrap.yml
.superplan/: config.toml  decisions.md  gotchas.md  plan.md
.superplan/changes/open-video-editor/: plan.md  tasks.md
.superplan/changes/open-video-editor/research/: codec-profile-conflict.md  mediabunny-web.md  native-architecture.md  nle-performance.md  qt-native-boundary.md  review-c-abi.md  review-core-store.md  review-media-web.md  review-native-architecture.md  review-nle-performance.md  review-t0008-implementation.md  t0008-fixture-oracle-research.md  terra-high-attestation.md
.superplan/changes/open-video-editor/specs/: README.md  architecture-decision.md  product-goal.md  vertical-slice.md
.superplan/changes/open-video-editor/tasks/: T-0001.md  T-0002.md  T-0003.md  T-0004.md  T-0005.md  T-0006.md  T-0007.md  T-0008.md  T-0009.md  T-0010.md  T-0011.md  T-0012.md  T-0013.md  T-0014.md  T-0015.md  T-0016.md  T-0017.md
.superplan/context/: INDEX.md  README.md
crates/contracts/: Cargo.toml
crates/contracts/src/: lib.rs
crates/editor-core/: Cargo.toml
crates/editor-core/src/: lib.rs
crates/project-store/: Cargo.toml
crates/project-store/src/: lib.rs
desktop/qt/: CMakeLists.txt
desktop/qt/src/: Main.qml  editor_controller.h  editor_controller.mm  main.cpp  main.mm  preview_item.h  preview_item.mm
docs/: bootstrap-verification.md  dependencies.md  dependency-policy.md  directory-ownership.md  licensing.md  toolchains.md  tooling-surfaces.md  worker-attestation.md
native/c-abi/: CMakeLists.txt
native/c-abi/include/stitch/: c_api.h
native/c-abi/rust/: Cargo.toml
native/c-abi/rust/src/: lib.rs
native/c-abi/tests/: c_api_layout_test.cpp
scripts/: bootstrap.sh  policy.sh
tasks/: lessons.md
toolchains/: versions.toml
tools/benchmark-harness/: Cargo.toml
tools/benchmark-harness/src/: lib.rs
tools/fixtures/: Cargo.toml
tools/fixtures/recipes/: corpus-v1.json
tools/fixtures/src/: lib.rs
tools/oracles/: Cargo.toml  oracle-lock.json
tools/oracles/contracts/: cpu-reference-v1.md  independent-verifier-contract-v1.md  metadata-checker-v1.md  tolerance-set-v1.json
tools/oracles/src/: lib.rs
