[workspace]
members = [
  "crates/contracts",
  "crates/editor-core",
  "crates/project-store",
  "native/c-abi/rust",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.97"
license = "GPL-3.0-or-later"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
